# django_with_fastapi

./: README.md  pyproject.toml
app/: api_router.py  asgi.py  settings.py  urls.py
core/: endpoints.py  models.py  urls.py  views.py
core/api/: hello_world.py
